--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
 
     <groupId>com.vv.personal</groupId>
     <artifactId>twm-tribalwars-crdb-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
     <description>TW service to handle all CRDB related actions</description>
     <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
-        <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
+        <java.version>17</java.version>
+        <spring-cloud.version>2022.0.4</spring-cloud.version>
         <spring-feign.version>1.4.7.RELEASE</spring-feign.version>
-        <jkt-pa.version>2.2.3</jkt-pa.version>
+        <jkt-pa.version>3.1.0</jkt-pa.version>
         <springfox.version>3.0.0</springfox.version>
         <google-gson.version>2.9.0</google-gson.version>
         <google-guava.version>31.0.1-jre</google-guava.version>
@@ -36,7 +36,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.12.RELEASE</version>
+        <version>3.1.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -112,9 +112,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
-            <version>${springfox.version}</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
         <dependency>
