Upgrading scripts and libs

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.vv.personal</groupId>
     <artifactId>twm-tribalwars-crdb-service</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.1.1</version>
     <description>TW service to handle all CRDB related actions</description>
     <packaging>jar</packaging>
 
@@ -20,8 +20,10 @@
         <springfox.version>3.0.0</springfox.version>
         <google-gson.version>2.9.0</google-gson.version>
         <google-guava.version>31.0.1-jre</google-guava.version>
-        <google-protobuf.version>3.21.10</google-protobuf.version>
         <lombok.version>1.18.22</lombok.version>
+        <protobuf.version>4.27.3</protobuf.version>
+        <ping-client.version>1.0.4</ping-client.version>
+        <artifactory.version>1.1.2</artifactory.version>
     </properties>
 
     <build>
@@ -102,13 +104,13 @@
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java</artifactId>
-            <version>${google-protobuf.version}</version>
+            <version>${protobuf.version}</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.protobuf</groupId>
             <artifactId>protobuf-java-util</artifactId>
-            <version>${google-protobuf.version}</version>
+            <version>${protobuf.version}</version>
         </dependency>
 
         <dependency>
@@ -139,7 +141,12 @@
         <dependency>
             <groupId>com.vv.personal</groupId>
             <artifactId>twm-artifactory</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${artifactory.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vv.personal</groupId>
+            <artifactId>twm-ping-client</artifactId>
+            <version>${ping-client.version}</version>
         </dependency>
     </dependencies>
 </project>
